# jismeshcode

./: .gitignore  README.md  README_en.md  pyproject.toml
.github/workflows/: test.yml
jismeshcode/: __init__.py  jismeshcode.py
mc2gd/: __init__.py  mc2gj.py
tests/: test_latlon2mc.py  test_mc2geojson.py  test_normalize_meshcode.py
