[tool.poetry]
name = "jismeshcode"
version = "0.1.2"
description = ""
authors = ["itch <marine.taichi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
